# axum-backend-template

./: .gitignore  Cargo.toml  Dockerfile  db_table_commands  docker-compose.yml
src/: auth.rs  error.rs  main.rs
src/auth/: jwt.rs  middleware.rs  routes.rs
src/auth/routes/: login.rs  register.rs  validate.rs
