[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["default", "http1", "http2", "macros"] }
dotenv = "0.15.0"
jsonwebtoken = "9.1.0"
pwhash = "1.0.0"
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2.4.1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
axum-sqlx-tx = { version = "0.6.0", features = [ "postgres" ] }
chrono = "0.4.31"
serde_json = "1.0.108"